tests/macro-tests/cases/widget_new/not_allowed_in_when1.stderr
error[E0599]: no method named `allowed_in_when_expr` found for struct `foo_` in the current scope
  --> cases/widget_new/not_allowed_in_when1.rs:16:13
   |
8  |   #[property(CONTEXT)]
   |   -------------------- method `allowed_in_when_expr` not found for this struct
...
16 |       let _ = Wgt! {
   |  _____________^
17 | |         margin = 0;
18 | |         when {
19 | |             let node = #foo;
...  |
23 | |         }
24 | |     };
   | |_____^ help: there is a method with a similar name: `allowed_in_when_assign`
   |
   = note: this error originates in the macro `zng::__proc_macro_util::widget::widget_new` which comes from the expansion of the macro `Wgt` (in Nightly builds, run with -Z macro-backtrace for more info)
